--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 body {
     margin: 0;
     padding-top: 800px;
-
+    text-align: center;
 }
 
 .profile {
@@ -49,7 +49,7 @@ h1 {
 
 #bio {
     padding: 50px;
-text-align: center;
+    text-align: center;
     font-size: 42px;
 }
 
@@ -68,33 +68,46 @@ p {
 
 }
 
-.links{
+.links {
     padding-top: 5px;
     padding-bottom: 5px;
     padding-left: 9px;
     padding-right: 9px;
     font-family: fantasy;
     font-size: 22px;
-    color:white;
-    float:left;
+    color: white;
+    float: left;
 }
 
-.menu{
+.menu {
     list-style: none;
     font-family: sans-serif;
     position: fixed;
-    top:10px;
+    top: 10px;
     right: 30px;
     cursor: pointer;
-        z-index: 10;
-        
+    z-index: 10;
+
 }
 
-.links:hover{
+.links:hover {
     background-color: dodgerblue;
     border-radius: 5px;
 }
 
-h2{
-font-family: 'Comfortaa', cursive;
+h2 {
+    font-family: 'Comfortaa', cursive;
+}
+
+html {
+    scroll-behavior: smooth;
+}
+
+a {
+    text-decoration: none;
+
+}
+
+.article:hover {
+    color: darkseagreen;
 }
